Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm
@@ -521,6 +521,7 @@ static AccessibilityObjectWrapper* AccessibilityUnignoredAncestor(AccessibilityO
     case LandmarkBannerRole:
     case LandmarkComplementaryRole:
     case LandmarkContentInfoRole:
+    case LandmarkDocRegionRole:
     case LandmarkMainRole:
     case LandmarkNavigationRole:
     case LandmarkRegionRole:
@@ -882,6 +883,7 @@ static AccessibilityObjectWrapper* AccessibilityUnignoredAncestor(AccessibilityO
         case LandmarkBannerRole:
         case LandmarkComplementaryRole:
         case LandmarkContentInfoRole:
+        case LandmarkDocRegionRole:
         case LandmarkMainRole:
         case LandmarkNavigationRole:
         case LandmarkRegionRole:
